--- a/error.html
+++ b/error.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
-    <link rel="stylesheet" href="error.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="error-text">Error</div>
-    <script src="error.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
